Fixed weird squishing of chapter link row items.

--- a/_sass/_chapter-links.scss
+++ b/_sass/_chapter-links.scss
@@ -4,8 +4,6 @@
 	&.row {
 		padding: 30px 0;
 		border-bottom: 1px solid rgba(150, 0, 0, 0.2);
-		display: inline-flex;
-		align-items: stretch;
 	}
 
 	/* remove bottom border from last row */
